# personal-finance-app

./: .env.example  .gitignore  Makefile  README.md  app.code-workspace  docker-compose.prod.yml  docker-compose.yml  personal-finance-app.code-workspace
docs/: TODO.md
server/: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  alembic.ini  pyproject.toml  pytest.ini
server/.claude/skills/fastapi-service-patterns/: SKILL.md
server/alembic/: env.py
server/alembic/versions/: 20260218_0000_1a2b3c4d5e6f_initial_database.py  20260221_2349_606d7dae0e19_add_transaction_table.py  20260222_0904_9ac57c6a7529_change_transaction_amount_from_float_to_.py  20260223_0951_f236931b404d_add_insight_table.py  20260225_1637_9421f245f151_add_csv_upload_tables.py
server/app/: main.py
server/app/agents/: __init__.py  factory.py
server/app/agents/base/: __init__.py  agent.py
server/app/agents/chatbot/: __init__.py  graph.py  state.py
server/app/agents/insights/: README.md  __init__.py  agent.py  aggregator.py  nodes.py  state.py  templates.py
server/app/agents/shared/: __init__.py
server/app/agents/transactions_labeler/: __init__.py  agent.py  enums.py  models.py  nodes.py  state.py
server/app/analytics/: README.md  descriptive.py  temporal.py
server/app/api/dependencies/: agent.py  auth.py  conversation.py  database.py
server/app/api/middlewares/: __init__.py  access_log.py  auth.py  cors.py  logging.py  metrics.py  prometheus.py  security_headers.py
server/app/api/system/: __init__.py  health.py
server/app/api/v1/: analytics.py  api.py  auth.py  chatbot.py  conversation.py  insights.py  transactions.py
server/app/core/: config.py  limiter.py  logging.py  metrics.py
server/app/database/: __init__.py  context.py  engine.py
server/app/exceptions/: __init__.py  base.py  handlers.py
server/app/models/: __init__.py  base.py  conversation.py  csv_mapping_profile.py  csv_upload_session.py  insight.py  transaction.py  user.py
server/app/schemas/: __init__.py  analytics.py  auth.py  base.py  chat.py  conversation.py  csv_upload.py  insights.py  transaction.py
server/app/services/analytics/: exceptions.py  service.py
server/app/services/clerk/: __init__.py  exceptions.py  service.py
server/app/services/conversation/: __init__.py  exceptions.py  service.py
server/app/services/csv_mapping/: __init__.py  service.py
server/app/services/insights/: __init__.py  exceptions.py  service.py
server/app/services/llm/: __init__.py  exceptions.py  service.py
server/app/tools/: README.md  __init__.py  financial.py
server/app/utils/: auth.py  csv_utils.py  graph.py  http_clients.py  merchant_mappings.py  sanitization.py
server/docs/: authentication.md  gdpr-compliance-guide.md
server/docs/plans/: 2026-02-21-transactions-design.md  2026-02-21-transactions-implementation.md  2026-02-22-analytics-design.md  2026-02-22-analytics-implementation.md  2026-02-23-insights-agent-design.md  2026-02-23-insights-agent-implementation.md  2026-02-25-csv-upload-design.md  2026-02-25-csv-upload-implementation.md  2026-02-25-csv-upload-improvements.md  2026-02-26-insights-staleness-and-empty-fix-design.md  2026-02-26-insights-staleness-and-empty-fix.md
server/evals/: evaluator.py  main.py
server/scripts/: build-docker.sh  docker-entrypoint.sh  ensure-db-user.sh  logs-docker.sh  stop-docker.sh
server/tests/: README.md  __init__.py  conftest.py
server/tests/data/: test_transactions_10.csv  test_transactions_2_months.csv  test_transactions_400.csv
server/tests/integration/: conftest.py  test_analytics_api.py  test_transactions_api.py
server/tests/unit/: conftest.py
(+289 files in other folders)
